package Protos;

enum ContentEncoding {
   DEFAULTCONTENTENCODING = 0;
   GZIPCONTENTENCODING = 1;
}
message DynamicMessage {
   optional string id = 1 [default = ""];
   optional string type = 2 [default = ""];
   optional bytes data = 3;
   optional int32 message_id = 4 [default = 0];
}
enum ResponseCode {
   OK = 1;
   ERROR = 2;
   SERVERERROR = 3;
   SESSIONEXPIRED = 4;
   AUTHFAILED = 5;
   RATEEXCEEDED = 6;
   SERVERUNAVAILABLE = 7;
   INVALIDREQUEST = 8;
   INVALIDDATA = 9;
   LEADERBOARDMATCHMAKINGERROR = 10;
   UNAUTHORIZED = 11;
   SUSPENDED = 12;
   SERVEROUTAGE = 13;
   NETWORKUNAVAILABLE = 20;
   SEQUENCEHIGH = 30;
   SEQUENCELOW = 31;
   RECORDNOTFOUND = 32;
   EVENTNOTFOUND = 33;
   INSUFFICIENTRESOURCES = 40;
   INVALIDCLIENTVERSION = 50;
   FORCECLIENTRESTART = 51;
   INCOMPATIBLEDEVICE = 52;
   ACCOUNTUPDATED = 53;
   INVALIDRECEIPT = 60;
   PAYMENTPENDING = 61;
   OPPONENTINBATTLE = 71;
   UNDERATTACK = 72;
   OPPONENTDATASTALE = 73;
   BATTLETIMEDOUT = 74;
   PLAYERRANKSTALE = 75;
}
message ResponseEnvelope {
   optional int32 correlation_id = 1 [default = 0];
   optional int64 current_server_time = 2 [default = 0];
   optional bytes payload = 4;
   optional ResponseCode code = 5 [default = OK];
   optional string message = 6 [default = ""];
   optional ContentEncoding content_encoding = 7 [default = DEFAULTCONTENTENCODING];
   optional string stack_trace = 8 [default = ""];
   repeated DynamicMessage dynamic_message = 9;
   optional string maintenance_message = 10 [default = ""];
   optional string maintenance_link = 11 [default = ""];
   optional int32 sub_code = 12 [default = 0];
}
